--- a/httpd-laravel.conf
+++ b/httpd-laravel.conf
@@ -11,7 +11,7 @@ DirectoryIndex index.php index.html
 <VirtualHost *:80>
     DocumentRoot /var/www/laravel/public
     <Directory /var/www/laravel/public>
-        AllowOverride none
+        AllowOverride All
         Require all granted
     </Directory>
 </VirtualHost>
